Fixed the differences In Light and dark mode layout wise

--- a/style.css
+++ b/style.css
@@ -309,6 +309,7 @@ p{
     }
     .content {
         background-color: rgba(118, 164, 224, 0.7);
+        padding: 20px;
     }
     .arrow {
         color: #154F5B;
